<resources>
    <string name="app_name">LapakLakuShop</string>
    <string name="names">Nama</string>
    <string name="emails">Email</string>
    <string name="phones">Phone</string>
    <string name="passwords">Password</string>
    <string name="sign_ups">Sign Up</string>
    <string name="login">Login</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
